<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.10</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>dev.nathanlively</groupId>
	<artifactId>embabeltests</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>embabeltests</name>
	<description>How to test Embabel agents</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>25</java.version>
		<embabel-agent.version>0.3.4-SNAPSHOT</embabel-agent.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>com.embabel.agent</groupId>
			<artifactId>embabel-agent-starter</artifactId>
			<version>${embabel-agent.version}</version>
		</dependency>
		<dependency>
			<groupId>com.embabel.agent</groupId>
			<artifactId>embabel-agent-starter-ollama</artifactId>
			<version>${embabel-agent.version}</version>
		</dependency>
		<dependency>
			<groupId>com.embabel.agent</groupId>
			<artifactId>embabel-agent-test</artifactId>
			<version>${embabel-agent.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
